<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="@drawable/divider"
        android:padding="10dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/app_logo" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/text_border"
            android:drawableStart="@drawable/username"
            android:ems="10"
            android:hint="@string/user"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/text_border"
            android:drawableStart="@drawable/password"
            android:ems="10"
            android:hint="@string/pass"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rememberMe"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/button_border"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white" />
    </LinearLayout>


</FrameLayout>