<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="15dp"
    tools:context=".ListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNote1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note1"
            android:textColor="@color/lightgreen"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvNote2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note2"
            android:textColor="@color/lightgreen"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvNote3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note3"
            android:textColor="@color/lightgreen"
            android:textSize="15sp"
            android:textStyle="italic" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/lvItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:paddingBottom="3dp" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>




    <TextView
        android:id="@+id/tvLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/loading"
        android:textSize="25sp" />

</FrameLayout>