<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:padding="10sp"
    android:divider="@drawable/divider"
    android:showDividers="middle"
    tools:context=".ItemFragment">

    <TextView
        android:id="@+id/tvCurrentItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/itemDetails"
        android:textColor="@color/darkgrey"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUserIdLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10sp"
            android:text="@string/userid"
            android:textColor="@color/lightgreen"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/darkgrey"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvIdLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10sp"
            android:text="@string/id"
            android:textColor="@color/lightgreen"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/darkgrey"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvTitleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10sp"
            android:text="@string/title"
            android:textColor="@color/lightgreen"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/darkgrey"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvCompletedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10sp"
            android:text="@string/isCompleted"
            android:textColor="@color/lightgreen"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCompleted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkgrey"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="15sp"
            android:textStyle="italic" />

    </LinearLayout>


</LinearLayout>